src/styles/proyecto.css
.project{
    display:flex;
    flex-direction: column;
}

.project h1{
    font-family: var(--montserrat);
    font-size: 40px;
    color: black;
}

.project a{
    padding: 0.5em 3em;
    background-color: var(--strong-green);
    border-radius: 20px;
    border:0;
    color:var(--white);
    font-weight: 700;
    font-size: 14px;
    text-decoration: none;
    font-family: var(--montserrat);
}

.project a:hover{
    cursor: pointer;
    background-color: var(--dark-blue);
}

.projectHeader{
    display: flex;
    height: 100vh;
    align-items: center;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    background-image: url("../../public/assets/images/imgProjects.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
}

.projectMap{
    background-color: #006A6A;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 2em;
}

.mapArg{
    height: 600px;
    width: auto;
    
}

.projectList{
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding: 2em;
}

